LibHeifFX/src/main/java/org/libheif/nativ/heif_h.java

// Generated by jextract

package org.libheif.nativ;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class heif_h {

    heif_h() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();
    static final boolean TRACE_DOWNCALLS = Boolean.getBoolean("jextract.trace.downcalls");

    static void traceDowncall(String name, Object... args) {
         String traceArgs = Arrays.stream(args)
                       .map(Object::toString)
                       .collect(Collectors.joining(", "));
         System.out.printf("%s(%s)\n", name, traceArgs);
    }

    static MemorySegment findOrThrow(String symbol) {
        return SYMBOL_LOOKUP.find(symbol)
            .orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol: " + symbol));
    }

    static MethodHandle upcallHandle(Class<?> fi, String name, FunctionDescriptor fdesc) {
        try {
            return MethodHandles.lookup().findVirtual(fi, name, fdesc.toMethodType());
        } catch (ReflectiveOperationException ex) {
            throw new AssertionError(ex);
        }
    }

    static MemoryLayout align(MemoryLayout layout, long align) {
        return switch (layout) {
            case PaddingLayout p -> p;
            case ValueLayout v -> v.withByteAlignment(align);
            case GroupLayout g -> {
                MemoryLayout[] alignedMembers = g.memberLayouts().stream()
                        .map(m -> align(m, align)).toArray(MemoryLayout[]::new);
                yield g instanceof StructLayout ?
                        MemoryLayout.structLayout(alignedMembers) : MemoryLayout.unionLayout(alignedMembers);
            }
            case SequenceLayout s -> MemoryLayout.sequenceLayout(s.elementCount(), align(s.elementLayout(), align));
        };
    }

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    public static final ValueLayout.OfBoolean C_BOOL = ValueLayout.JAVA_BOOLEAN;
    public static final ValueLayout.OfByte C_CHAR = ValueLayout.JAVA_BYTE;
    public static final ValueLayout.OfShort C_SHORT = ValueLayout.JAVA_SHORT;
    public static final ValueLayout.OfInt C_INT = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfLong C_LONG_LONG = ValueLayout.JAVA_LONG;
    public static final ValueLayout.OfFloat C_FLOAT = ValueLayout.JAVA_FLOAT;
    public static final ValueLayout.OfDouble C_DOUBLE = ValueLayout.JAVA_DOUBLE;
    public static final AddressLayout C_POINTER = ValueLayout.ADDRESS
            .withTargetLayout(MemoryLayout.sequenceLayout(java.lang.Long.MAX_VALUE, JAVA_BYTE));
    public static final ValueLayout.OfInt C_LONG = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfDouble C_LONG_DOUBLE = ValueLayout.JAVA_DOUBLE;
    /**
     * {@snippet lang=c :
     * typedef long long ptrdiff_t
     * }
     */
    public static final OfLong ptrdiff_t = heif_h.C_LONG_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long long size_t
     * }
     */
    public static final OfLong size_t = heif_h.C_LONG_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned short wchar_t
     * }
     */
    public static final OfShort wchar_t = heif_h.C_SHORT;
    /**
     * {@snippet lang=c :
     * typedef double max_align_t
     * }
     */
    public static final OfDouble max_align_t = heif_h.C_DOUBLE;

    private static class heif_get_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_POINTER    );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_get_version"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *heif_get_version()
     * }
     */
    public static FunctionDescriptor heif_get_version$descriptor() {
        return heif_get_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *heif_get_version()
     * }
     */
    public static MethodHandle heif_get_version$handle() {
        return heif_get_version.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * const char *heif_get_version()
     * }
     */
    public static MemorySegment heif_get_version() {
        var mh$ = heif_get_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_get_version");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_get_version_number {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT    );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_get_version_number"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t heif_get_version_number()
     * }
     */
    public static FunctionDescriptor heif_get_version_number$descriptor() {
        return heif_get_version_number.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t heif_get_version_number()
     * }
     */
    public static MethodHandle heif_get_version_number$handle() {
        return heif_get_version_number.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * uint32_t heif_get_version_number()
     * }
     */
    public static int heif_get_version_number() {
        var mh$ = heif_get_version_number.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_get_version_number");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_get_version_number_major {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT    );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_get_version_number_major"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_get_version_number_major()
     * }
     */
    public static FunctionDescriptor heif_get_version_number_major$descriptor() {
        return heif_get_version_number_major.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_get_version_number_major()
     * }
     */
    public static MethodHandle heif_get_version_number_major$handle() {
        return heif_get_version_number_major.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_get_version_number_major()
     * }
     */
    public static int heif_get_version_number_major() {
        var mh$ = heif_get_version_number_major.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_get_version_number_major");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_get_version_number_minor {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT    );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_get_version_number_minor"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_get_version_number_minor()
     * }
     */
    public static FunctionDescriptor heif_get_version_number_minor$descriptor() {
        return heif_get_version_number_minor.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_get_version_number_minor()
     * }
     */
    public static MethodHandle heif_get_version_number_minor$handle() {
        return heif_get_version_number_minor.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_get_version_number_minor()
     * }
     */
    public static int heif_get_version_number_minor() {
        var mh$ = heif_get_version_number_minor.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_get_version_number_minor");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_get_version_number_maintenance {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT    );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_get_version_number_maintenance"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_get_version_number_maintenance()
     * }
     */
    public static FunctionDescriptor heif_get_version_number_maintenance$descriptor() {
        return heif_get_version_number_maintenance.DESC;
    }
